# rp2350_flappy_dot

./: CMakeLists.txt  README.md  build.sh  flash.sh
src/: main.cpp
